components/policies/production/policies/macos/restrict-macos-runners.yaml
---
# TODO: move to k8s validating admission policies when
# https://github.com/kubernetes/kubernetes/issues/133827 is resolved
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: restrict-macos-namespaces
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: ['tekton.dev']
        apiVersions: ['v1']
        operations: ['CREATE', 'UPDATE']
        resources: ['pipelineruns']
    namespaceSelector:
      matchLabels:
        konflux-ci.dev/type: tenant
  variables:
    - name: isRestrictedNamespace
      expression: |
        resource.Get("v1", "configmaps", "konflux-policies", "macos-allowlist").data.namespaces.split('\n').all(n, n != object.metadata.namespace)
    - name: isRestrictedPlatform
      expression: |
        uint(object.metadata.annotations["kueue.konflux-ci.dev/requests-macos-mac2metal-arm64"]) > 0
  validations:
    - messageExpression: "'namespace ' + object.metadata.namespace + ' is not allowed to acquire macos runners'"
      expression: |
        !(variables.isRestrictedPlatform && variables.isRestrictedNamespace)
---
apiVersion: v1
kind: Namespace
metadata:
  name: konflux-policies
